; ModuleID = '/home/carl/AnghaBench/libgit2/tests/apply/extr_fromdiff.c_test_apply_fromdiff__binary_change_delta.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/apply/extr_fromdiff.c_test_apply_fromdiff__binary_change_delta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@FILE_BINARY_DELTA_ORIGINAL = common dso_local global i32 0, align 4
@FILE_BINARY_DELTA_ORIGINAL_LEN = common dso_local global i32 0, align 4
@FILE_BINARY_DELTA_MODIFIED = common dso_local global i32 0, align 4
@FILE_BINARY_DELTA_MODIFIED_LEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"binary.bin\00", align 1
@binary_opts = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_apply_fromdiff__binary_change_delta() #0 {
  %1 = alloca %struct.TYPE_5__, align 4
  %2 = alloca %struct.TYPE_5__, align 4
  %3 = bitcast %struct.TYPE_5__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %3, i8* align 4 bitcast (%struct.TYPE_5__* @GIT_BUF_INIT to i8*), i64 8, i1 false)
  %4 = bitcast %struct.TYPE_5__* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %4, i8* align 4 bitcast (%struct.TYPE_5__* @GIT_BUF_INIT to i8*), i64 8, i1 false)
  %5 = load i32, i32* @FILE_BINARY_DELTA_ORIGINAL, align 4
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 1
  store i32 %5, i32* %6, align 4
  %7 = load i32, i32* @FILE_BINARY_DELTA_ORIGINAL_LEN, align 4
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* @FILE_BINARY_DELTA_MODIFIED, align 4
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 1
  store i32 %9, i32* %10, align 4
  %11 = load i32, i32* @FILE_BINARY_DELTA_MODIFIED_LEN, align 4
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %2, i32 0, i32 0
  store i32 %11, i32* %12, align 4
  %13 = call i32 @apply_gitbuf(%struct.TYPE_5__* %1, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), %struct.TYPE_5__* %2, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32* null, i32* @binary_opts)
  %14 = call i32 @cl_git_pass(i32 %13)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @apply_gitbuf(%struct.TYPE_5__*, i8*, %struct.TYPE_5__*, i8*, i32*, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
